<resources>
    <string name="app_name">PC01DAM21101034</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_listado">Players</string>
    <string name="menu_rendimiento">Rendimiento</string>
    <string name="menu_equipos">Equipos</string>

    <string name="etTitle">SIGN IN</string>
    <string name="etNameHint">Enter an Email</string>
    <string name="etPasswordHint">Enter a password</string>
    <string name="btnLogin">LOGIN</string>
    <string name="tvTitle">RENDIMIENTO</string>
    <string name="btnCalcular">Calcular</string>
    <string name="hintKm">Kilómetros recorridos</string>
    <string name="hintMin">Minutos jugados</string>
    <string name="tvMensaje">El rendimiento es:</string>
</resources>