<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_players">

    <fragment
        android:id="@+id/nav_players"
        android:name="dev.williamscg.pc01dam21101034.ui.home.HomeFragment"
        android:label="@string/menu_listado"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_rendimiento"
        android:name="dev.williamscg.pc01dam21101034.ui.gallery.GalleryFragment"
        android:label="@string/menu_rendimiento"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_equipos"
        android:name="dev.williamscg.pc01dam21101034.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_equipos"
        tools:layout="@layout/fragment_slideshow" />
</navigation>